GC covering letter

--- a/coveringLetter/coveringLetter.tex
+++ b/coveringLetter/coveringLetter.tex
@@ -81,7 +81,7 @@
 
 \opening{Dear Prof Azim Eskandarian,}
 
-\noindent We are pleased to submit an original research article entitled “Safety Validation of Autonomous Vehicles using Assertion-based Oracles” for consideration of publishing in IEEE Transactions on Intelligent Transportation Systems. 
+\noindent We are pleased to submit an original research article entitled “Safety Validation of Autonomous Vehicles using Assertion Checking” for consideration of publishing in IEEE Transactions on Intelligent Transportation Systems. 
 
 \noindent We confirm that this work is original and has not been published elsewhere and is not currently under consideration for publication elsewhere. We have no conflicts of interest to disclose. 
 
