AG corrections to runtime section

--- a/document/source/assertion.bib
+++ b/document/source/assertion.bib
@@ -561,3 +561,10 @@ year={1968}
   pages={16--25},
   year={2016},
 }
+
+@article{ghobrial2022operational,
+  title={Operational Adaptation of DNN Classifiers using Elastic Weight Consolidation},
+  author={Ghobrial, Abanoub and Zheng, Xuan and Hond, Darryl and Asgari, Hamid and Eder, Kerstin},
+  journal={arXiv preprint arXiv:2205.00147},
+  year={2022}
+}
