--- a/coveringLetter/coveringLetter.tex
+++ b/coveringLetter/coveringLetter.tex
@@ -31,7 +31,7 @@
 
 \Who{Dr. Chris Harper} % Your name
 
-\Title{, PhD} % Your title, leave blank for no title
+\Title{} % Your title, leave blank for no title
 
 \authordetails{
 	Bristol Robotics Lab\\ % Your department/institution
@@ -39,7 +39,7 @@
 	Colharbour Lane\\ % Your address
 	Bristol, BS34 8QZ, UK\\ % Your city, zip code, country, etc
 	Email: chris.harper@brl.ac.uk\\ % Your email address
-	URL: \url{bristolroboticslab.com/}\\ % Your URL
+	URL: \url{www.bristolroboticslab.com}\\ % Your URL
 	% URL: \url{bristol.ac.uk/engineering/research/trustworthy-systems-laboratory/}\\ % Your URL
 	% YouTube: \url{https://youtu.be/1emO3-OYn5k}
 }
