--- a/document/source/body.tex
+++ b/document/source/body.tex
@@ -1065,7 +1065,7 @@ For example, an autonomous taxi may need to perform a minimum number of fare-pay
 % \end{table}
 
 
-An analysis for overtaking performance can be observed in the simulation results presented in Section~\ref{sim_case_study} by comparing the required SDA to the actual distance ahead of the Oncoming Vehicle and the relative frequency with which overtaking opportunities of a given distance ahead actually occur. Figure~\ref{fig:distribution} presents a sample of overtaking distances based on findings presented by Farah~\cite{farah2016drivers} as a representative example. Some opportunities may be unsafe because the actual DA is less than the required SDA (as illustrated in region of the graph marked 'unsafe'). For a given driving profile the proportion of those overtaking opportunities that are achievable are those where the actual DA is greater than distance that can be achieved under that profile. In Figure~\ref{fig:distribution} this is represented by the area under the curve to the right of the line representing the achievable DA for a given profile. This is shown in Figure~\ref{fig:distribution} for the nominal profile as an example. 
+An analysis for overtaking performance can be observed in the simulation results presented in Section~\ref{sim_case_study} by comparing the required SDA to the actual distance ahead of the Oncoming Vehicle and the relative frequency with which overtaking opportunities of a given distance ahead actually occur. Figure~\ref{fig:distribution} presents a sample of overtaking distances based on findings presented by Farah~\cite{farah2016drivers} as a representative example. Some opportunities may be unsafe because the actual DA is less than the required SDA (as illustrated in region of the graph marked `unsafe'). For a given driving profile the proportion of those overtaking opportunities that are achievable are those where the actual DA is greater than distance that can be achieved under that profile. In Figure~\ref{fig:distribution} this is represented by the area under the curve to the right of the line representing the achievable DA for a given profile. This is shown in Figure~\ref{fig:distribution} for the nominal profile as an example. 
 
 % as listed in Table~\ref{Overtaking_Profiles}. 
 %In this previous example, a failure of the SDA assertion indicates a violation of the UKHC and this happens when the actual distance ahead is less than the required Safe Distance Ahead, i.e. intersecting the danger space of the Oncoming Vehicle. 
